# fingerprint_matching

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_bozorth.txt  run_fingerprint_matching.sh
include/: openFHE_wrapper.h
src/: bozorth3.cpp  lib_bozorth3.cpp  lib_bz_alloc.cpp  lib_bz_drvrs.cpp  lib_bz_gbls.cpp  lib_bz_io.cpp  lib_bz_sort.cpp  main.cpp  openFHE_wrapper.cpp  usage.cpp
test/: 15.xyt  21.xyt  23.xyt  4.xyt  5.xyt  6.xyt  7.xyt  8.xyt  9.xyt
tools/: .gitignore  README.md  example.sh  generate_xyt.sh  minutia.py  setup.sh  sim_pairs.txt  windows_example.sh
tools/nbis/: rules.mak.src
tools/nbis/bozorth3/src/lib/bozorth3/: bozorth3.c  bz_drvrs.c  custom_bozorth3.c
tools/nbis/exports/include/: an2k.h  little.h
tools/test/: 32.xyt  32_matches.txt  32_pairs.txt  32_sim.txt  6_32_sim.txt  6_sim.txt
